merge con eventos de inutilizacion de documentos electronicos y notificaciones push